--- a/about.html
+++ b/about.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="track" content="2qc1opQ0TsJDhuDIi" />
     <title>About Blunova Properties | Luxury Rentals in Tennessee</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet" />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -262,8 +259,7 @@
           left: 60px;
           border: medium solid var(--secondary-color);
           border-width: 10px 10px 10px 0;
-          border-color: transparent var(--secondary-color) transparent
-            transparent;
+          border-color: transparent var(--secondary-color) transparent transparent;
         }
 
         .left::after,
@@ -278,10 +274,7 @@
     </style>
 
     <!-- Google tag (gtag.js) -->
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
-    ></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -296,12 +289,12 @@
       <nav>
         <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
-          <li><a href="/portfolio/blunova1/index.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li>
-            <a href="/portfolio/blunova1/properties.html">Properties</a>
+            <a href="./properties.html">Properties</a>
           </li>
-          <li><a href="/portfolio/blunova1/about.html">About</a></li>
-          <li><a href="/portfolio/blunova1/contact.html">Contact</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -314,51 +307,27 @@
       <section class="about-content">
         <h2>Our Story</h2>
         <p>
-          Blunova Properties was founded in 2010 with a vision to revolutionize
-          the luxury rental market in Tennessee. Our founders, Sarah Thompson
-          and Michael Chen, saw an opportunity to blend modern design with
-          Southern charm, creating unique living spaces that cater to the
-          discerning renter.
+          Blunova Properties was founded in 2010 with a vision to revolutionize the luxury rental market in Tennessee. Our founders, Sarah Thompson and Michael Chen, saw an
+          opportunity to blend modern design with Southern charm, creating unique living spaces that cater to the discerning renter.
         </p>
         <p>
-          Starting with a single property in Nashville, we've grown to manage
-          over 50 premium rentals across Tennessee's major cities. Our success
-          is built on our commitment to quality, attention to detail, and
-          dedication to providing an unparalleled living experience for our
-          tenants.
+          Starting with a single property in Nashville, we've grown to manage over 50 premium rentals across Tennessee's major cities. Our success is built on our commitment to
+          quality, attention to detail, and dedication to providing an unparalleled living experience for our tenants.
         </p>
 
         <h2>Our Mission</h2>
         <p>
-          At Blunova Properties, our mission is to redefine luxury living in
-          Tennessee. We strive to create homes that inspire, comfort, and
-          delight our residents. By carefully curating our properties and
-          providing exceptional service, we aim to exceed expectations and set
-          new standards in the rental market.
+          At Blunova Properties, our mission is to redefine luxury living in Tennessee. We strive to create homes that inspire, comfort, and delight our residents. By carefully
+          curating our properties and providing exceptional service, we aim to exceed expectations and set new standards in the rental market.
         </p>
 
         <h2>Our Values</h2>
         <ul>
-          <li>
-            <strong>Quality:</strong> We never compromise on the quality of our
-            properties or services.
-          </li>
-          <li>
-            <strong>Innovation:</strong> We continuously seek new ways to
-            improve and enhance the living experience.
-          </li>
-          <li>
-            <strong>Integrity:</strong> We operate with honesty and transparency
-            in all our dealings.
-          </li>
-          <li>
-            <strong>Community:</strong> We believe in fostering a sense of
-            belonging among our residents and in the neighborhoods we serve.
-          </li>
-          <li>
-            <strong>Sustainability:</strong> We are committed to implementing
-            eco-friendly practices in our properties and operations.
-          </li>
+          <li><strong>Quality:</strong> We never compromise on the quality of our properties or services.</li>
+          <li><strong>Innovation:</strong> We continuously seek new ways to improve and enhance the living experience.</li>
+          <li><strong>Integrity:</strong> We operate with honesty and transparency in all our dealings.</li>
+          <li><strong>Community:</strong> We believe in fostering a sense of belonging among our residents and in the neighborhoods we serve.</li>
+          <li><strong>Sustainability:</strong> We are committed to implementing eco-friendly practices in our properties and operations.</li>
         </ul>
       </section>
       <h2 style="text-align: center; margin-bottom: 2rem">Our Journey</h2>
@@ -403,9 +372,7 @@
       </section>
 
       <section class="team-section">
-        <h2 style="text-align: center; margin-bottom: 2rem">
-          Meet Our Leadership Team
-        </h2>
+        <h2 style="text-align: center; margin-bottom: 2rem">Meet Our Leadership Team</h2>
         <div class="team-grid">
           <div class="team-member">
             <img
@@ -444,13 +411,9 @@
     <footer>
       <p>© 2023 Blunova Properties. All rights reserved.</p>
       <p>
-        <a href="/portfolio/blunova1/privacy-policy.html" style="color: white"
-          >Privacy Policy</a
-        >
+        <a href="./privacy-policy.html" style="color: white">Privacy Policy</a>
         |
-        <a href="/portfolio/blunova1/terms-of-service.html" style="color: white"
-          >Terms of Service</a
-        >
+        <a href="./terms-of-service.html" style="color: white">Terms of Service</a>
       </p>
     </footer>
   </body>
