--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="track" content="Clp49d13KT6Xk0tiz" />
     <title>Contact Blunova Properties | Luxury Rentals in Tennessee</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet" />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -186,10 +183,7 @@
     </style>
 
     <!-- Google tag (gtag.js) -->
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
-    ></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -204,10 +198,9 @@
       <nav>
         <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
-          <li><a href="/portfolio/blunova1/index.html">Home</a></li>
-          <li><a href="/portfolio/blunova1/properties.html">Properties</a></li>
-          <li><a href="/portfolio/blunova1/about.html">About</a></li>
-          <li><a href="/portfolio/blunova1/contact.html">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -221,18 +214,11 @@
         <div class="contact-grid">
           <div class="contact-info">
             <h2>Get in Touch</h2>
-            <p>
-              <strong>Address:</strong> 123 Main Street, Nashville, TN 37203
-            </p>
+            <p><strong>Address:</strong> 123 Main Street, Nashville, TN 37203</p>
             <p><strong>Phone:</strong> (615) 555-0123</p>
             <p>
               <strong>Email:</strong>
-              <a
-                href="/portfolio/blunova1/cdn-cgi/l/email-protection.html"
-                class="__cf_email__"
-                data-cfemail="0861666e67486a647d66677e69787a67786d7a7c616d7b266b6765"
-                >[email&nbsp;protected]</a
-              >
+              <a href="./cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="0861666e67486a647d66677e69787a67786d7a7c616d7b266b6765">[email&nbsp;protected]</a>
             </p>
             <p>
               <strong>Office Hours:</strong><br />
@@ -243,10 +229,7 @@
           </div>
           <div class="contact-form">
             <h2>Send Us a Message</h2>
-            <form
-              method="GET"
-              action="https://blunovaproperties.com/submit-contact"
-            >
+            <form method="GET" action="https://blunovaproperties.com/submit-contact">
               <label for="name">Name:</label>
               <input type="text" id="name" name="name" required="" />
 
@@ -257,39 +240,25 @@
               <input type="tel" id="phone" name="phone" />
 
               <label for="message">Message:</label>
-              <textarea
-                id="message"
-                name="message"
-                rows="4"
-                required=""
-              ></textarea>
+              <textarea id="message" name="message" rows="4" required=""></textarea>
 
               <button type="submit">Send Message</button>
             </form>
           </div>
         </div>
 
-        <div class="map-container">
-          [Interactive map showing Blunova Properties office location]
-        </div>
+        <div class="map-container">[Interactive map showing Blunova Properties office location]</div>
       </section>
     </main>
 
     <footer>
       <p>© 2023 Blunova Properties. All rights reserved.</p>
       <p>
-        <a href="/portfolio/blunova1/privacy-policy.html" style="color: white"
-          >Privacy Policy</a
-        >
+        <a href="./privacy-policy.html" style="color: white">Privacy Policy</a>
         |
-        <a href="/portfolio/blunova1/terms-of-service.html" style="color: white"
-          >Terms of Service</a
-        >
+        <a href="./terms-of-service.html" style="color: white">Terms of Service</a>
       </p>
     </footer>
-    <script
-      data-cfasync="false"
-      src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
-    ></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   </body>
 </html>
