--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="track" content="ilP37bsuJBxCMKqil" />
     <title>Cherry Grove | Blunova Properties</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet" />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -93,11 +90,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: linear-gradient(
-          to bottom,
-          rgba(0, 0, 0, 0.2),
-          rgba(0, 0, 0, 0.6)
-        );
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6));
       }
 
       .property-hero-content {
@@ -203,10 +196,7 @@
     </style>
 
     <!-- Google tag (gtag.js) -->
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
-    ></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -221,11 +211,8 @@
       <nav>
         <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
-          <li>
-            <a href="/index.html">Properties</a>
-          </li>
-          <li><a href="/index.html">About</a></li>
-          <li><a href="/index.html">Contact</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -241,15 +228,10 @@
       <section class="property-details">
         <div class="property-description">
           <h2>Property Overview</h2>
+          <p>This charming retreat in Knoxville offers a cozy and comfortable stay. The property features modern amenities and is perfect for both short and long stays.</p>
           <p>
-            This charming retreat in Knoxville offers a cozy and comfortable
-            stay. The property features modern amenities and is perfect for both
-            short and long stays.
-          </p>
-          <p>
-            The space includes a fully equipped kitchen, a spacious living area,
-            and dedicated workspaces. The bedroom is designed for relaxation
-            with a comfortable bed and ample storage.
+            The space includes a fully equipped kitchen, a spacious living area, and dedicated workspaces. The bedroom is designed for relaxation with a comfortable bed and ample
+            storage.
           </p>
           <h2>Amenities</h2>
           <ul>
@@ -263,20 +245,15 @@
           </ul>
           <h2>Location</h2>
           <p>
-            Located in a quiet neighborhood in Knoxville, this property is close
-            to local attractions, restaurants, and shopping centers. Enjoy easy
-            access to downtown Knoxville and the University of Tennessee.
+            Located in a quiet neighborhood in Knoxville, this property is close to local attractions, restaurants, and shopping centers. Enjoy easy access to downtown Knoxville
+            and the University of Tennessee.
           </p>
-          <a href="" class="cta-button">Apply Now</a>
         </div>
         <div class="property-features">
           <h3>Quick Facts</h3>
           <ul class="feature-list">
             <li><strong>Bedrooms:</strong> 4</li>
-            <li>
-              <strong>Bathrooms:</strong> 1.5 shared bathrooms, with the master
-              bedroom having a private bathroom.
-            </li>
+            <li><strong>Bathrooms:</strong> 1.5 shared bathrooms, with the master bedroom having a private bathroom.</li>
             <li><strong>Pet Policy:</strong> Pets not allowed</li>
           </ul>
         </div>
@@ -285,124 +262,36 @@
       <section style="margin: 40px">
         <h2>Rooms</h2>
         <p>
-          <strong>
-            Each room below goes to airbnb which has availability and pricing
-            information
-          </strong>
+          <strong> Each room below goes to airbnb which has availability and pricing information </strong>
         </p>
 
         <section class="gallery">
-          <a
-            href="https://www.airbnb.com/rooms/1030589498253747656"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img src="./rooms/3.webp" width="200" height="200"
-          /></a>
-          <a
-            href="https://www.airbnb.com/rooms/1030589992179067582"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img src="./rooms/1.jpeg" width="200" height="200"
-          /></a>
-          <a
-            href="https://www.airbnb.com/rooms/1030589321409011455"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img src="./rooms/2.webp" width="200" height="200"
-          /></a>
+          <a href="https://www.airbnb.com/rooms/1030589498253747656" target="_blank" rel="noopener noreferrer"><img src="./rooms/3.webp" width="200" height="200" /></a>
+          <a href="https://www.airbnb.com/rooms/1030589992179067582" target="_blank" rel="noopener noreferrer"><img src="./rooms/1.jpeg" width="200" height="200" /></a>
+          <a href="https://www.airbnb.com/rooms/1030589321409011455" target="_blank" rel="noopener noreferrer"><img src="./rooms/2.webp" width="200" height="200" /></a>
 
-          <a
-            href="https://www.airbnb.com/rooms/1010131515172519042"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img src="./rooms/4.jpeg" width="200" height="200"
-          /></a>
+          <a href="https://www.airbnb.com/rooms/1010131515172519042" target="_blank" rel="noopener noreferrer"><img src="./rooms/4.jpeg" width="200" height="200" /></a>
         </section>
         <h2>House</h2>
         <section class="gallery">
-          <img
-            src="./cherry-grove-images/Front_2.jpg"
-            width="200"
-            height="200"
-          />
+          <img src="./cherry-grove-images/Front_2.jpg" width="200" height="200" />
           <img src="./cherry-grove-images/Front.jpg" width="200" height="200" />
           <img src="./cherry-grove-images/Foyer.jpg" width="200" height="200" />
-
-          <img
-            src="./cherry-grove-images/Kitchen.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/Kitchen_2.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/Kitchen_3.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_10_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_12_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_13_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_14_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_2_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_3_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_4_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_5_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_6_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_7_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_8_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
-          <img
-            src="./cherry-grove-images/photo_9_2023-11-08_06-02-46.jpg"
-            width="200"
-            height="200"
-          />
+          <img src="./cherry-grove-images/Kitchen.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/Kitchen_2.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/Kitchen_3.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_10_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_12_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_13_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_14_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_2_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_3_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_4_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_5_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_6_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_7_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_8_2023-11-08_06-02-46.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/photo_9_2023-11-08_06-02-46.jpg" width="200" height="200" />
         </section>
       </section>
     </main>
@@ -418,16 +307,7 @@
         galleryImages.forEach((img) => {
           img.addEventListener("click", () => {
             const fullscreenImg = document.createElement("div");
-            fullscreenImg.style.position = "fixed";
-            fullscreenImg.style.top = "0";
-            fullscreenImg.style.left = "0";
-            fullscreenImg.style.width = "100%";
-            fullscreenImg.style.height = "100%";
-            fullscreenImg.style.backgroundColor = "rgba(0,0,0,0.9)";
-            fullscreenImg.style.display = "flex";
-            fullscreenImg.style.alignItems = "center";
-            fullscreenImg.style.justifyContent = "center";
-            fullscreenImg.style.zIndex = "9999";
+            fullscreenImg.style = `position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); display: flex; align-items: center; justify-content: center; z-index: 9999;`;
 
             const imgElement = document.createElement("img");
             imgElement.src = img.src;
