--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="track" content="8TGYQOuEB3cWFtObB" />
-    <title>Blunova Properties - Luxury Rentals in Tennessee</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    <title>Blunova Properties - Comfortable Rentals in Tennessee</title>
+    <link rel="stylesheet" href="https://get.mavo.io/mavo.min.css" />
+    <script src="https://get.mavo.io/mavo.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet" />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -53,6 +52,8 @@
       .nav-links {
         display: flex;
         list-style: none;
+        --mv-property: links;
+        --mv-multiple: true;
       }
 
       .nav-links li {
@@ -63,6 +64,7 @@
         color: white;
         text-decoration: none;
         transition: color 0.3s ease;
+        --mv-property: link;
       }
 
       .nav-links a:hover {
@@ -84,6 +86,7 @@
 
       .hero-content {
         z-index: 1;
+        --mv-property: content;
       }
 
       .hero h1 {
@@ -118,9 +121,13 @@
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         gap: 2rem;
         margin-top: 2rem;
+        --mv-list: true;
+        /* --mv-multiple: true; */
+        --mv-property: properties;
       }
 
       .property-card {
+        /* --mv-list-item: true; */
         background-color: white;
         border-radius: 8px;
         overflow: hidden;
@@ -134,8 +141,10 @@
 
       .property-image {
         height: 200px;
-        background-size: cover;
-        background-position: center;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+        --mv-property: image;
       }
 
       .property-details {
@@ -146,11 +155,13 @@
         font-family: "Playfair Display", serif;
         font-size: 1.2rem;
         margin-bottom: 0.5rem;
+        --mv-property: title;
       }
 
       .property-price {
         font-weight: 700;
         color: var(--primary-color);
+        --mv-property: price;
       }
 
       .cta-button {
@@ -174,6 +185,7 @@
         text-align: center;
         padding: 1rem;
         margin-top: 2rem;
+        --mv-property: footer;
       }
 
       @media (max-width: 768px) {
@@ -192,10 +204,7 @@
     </style>
 
     <!-- Google tag (gtag.js) -->
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
-    ></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -205,12 +214,11 @@
       gtag("config", "G-V0GW25P48Z");
     </script>
   </head>
-  <body>
+  <body mv-plugins="tinymce importhtml yaml" mv-app="blunova-home" mv-storage="https://github.com/hsingh23/blunova" mv-bar="no-login" mv-upload-path="pictures">
     <header>
       <nav>
         <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
-          <li><a href="./properties.html">Properties</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
@@ -220,13 +228,6 @@
     <section class="hero">
       <div class="hero-overlay"></div>
       <div class="hero-content">
-        <h1>Exclusive Properties in Knoxville</h1>
-        <p>
-          I'm excited to share a curated selection of my rental properties
-          located in the beautiful city of Knoxville, Tennessee. These homes,
-          personally managed by me, offer a comfortable and welcoming living
-          experience.
-        </p>
       </div>
     </section>
 
@@ -235,76 +236,20 @@
         <h2>Featured Properties</h2>
         <div class="property-list">
           <div class="property-card">
-            <div
-              class="property-image"
-              style="
-                background-image: url('./properties/cherry-grove-images/Front.jpg');
-              "
-            ></div>
+            <img class="property-image" src="./properties/cherry-grove-images/Front.jpg"></img>
             <div class="property-details">
               <h3 class="property-title">Cherry Grove</h3>
               <p class="property-price">Knoxville, TN</p>
-              <p>Single family house with 4 Rooms for rent</p>
-              <a href="./properties/cherry-grove.html" class="cta-button"
-                >View Details</a
-              >
+              <p class="property-description">Single family house with 4 Rooms for rent</p>
+              <a href="./properties/cherry-grove.html" class="cta-button">View Details</a>
             </div>
           </div>
-          <div class="property-card">
-            <div
-              class="property-image"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1175&amp;q=80');
-              "
-            ></div>
-            <div class="property-details">
-              <h3 class="property-title">Creekhead Cove</h3>
-              <p class="property-price">Knoxville, TN</p>
 
-              <p>Single family house with 4 Rooms for rent</p>
-              <a href="/properties/suburban-home.html" class="cta-button"
-                >View Details</a
-              >
-            </div>
-          </div>
-          <div class="property-card">
-            <div
-              class="property-image"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-              "
-            ></div>
-            <div class="property-details">
-              <h3 class="property-title">Chimmney Ridge</h3>
-              <p class="property-price">Knoxville, TN</p>
-              <p>Single family house with 3 Rooms for rent</p>
-              <a href="/properties/riverfront-condo.html" class="cta-button"
-                >View Details</a
-              >
-            </div>
-          </div>
-          <div class="property-card">
-            <div
-              class="property-image"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-              "
-            ></div>
-            <div class="property-details">
-              <h3 class="property-title">Luttrell and 3rd</h3>
-              <p class="property-price">Knoxville, TN</p>
-              <p>2 (1 bed apartment), and 2 (2 bedroom apartment)</p>
-              <a href="/properties/riverfront-condo.html" class="cta-button"
-                >View Details</a
-              >
-            </div>
-          </div>
         </div>
       </section>
     </main>
 
     <footer>
-      <p>© 2023 Blunova Properties. All rights reserved.</p>
     </footer>
   </body>
 </html>
