chore: Update blunova-home.json and index.html files

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       gtag("config", "G-V0GW25P48Z");
     </script>
   </head>
-  <body mv-plugins="tinymce importhtml yaml" mv-app="blunova-home" mv-storage="https://github.com/hsingh23/blunova" mv-bar="no-login" mv-upload-path="pictures">
+  <body mv-plugins="tinymce importhtml" mv-app="blunova-home" mv-storage="https://github.com/hsingh23/blunova" mv-bar="no-login" mv-upload-path="pictures">
     <header>
       <nav>
         <div class="logo">Blunova Properties</div>
