chore: Update blunova-home.json and index.html files

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         display: flex;
         list-style: none;
         --mv-property: links;
-        --mv-multiple: true;
+        --mv-list: true;
       }
 
       .nav-links li {
